--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "mocha": "*",
     "should": "~2.1.0",
+    "css-value": "*",
     "chai": "*", 
     "sinon": "*"
   },
